Corregi gp-hero-pages

--- a/pages/jugadores.html
+++ b/pages/jugadores.html
@@ -213,11 +213,42 @@
 </main>
 
 <!-- FOOTER -->
-<footer class="gp-footer">
-  <div class="gp-footer-bottom">
-    DISEÑADO POR COOPERATIVA GENEOS LTDA.
-  </div>
-</footer>
+  <footer class="gp-footer">
+    <div class="gp-footer-top gp-container">
+      <!-- WhatsApp -->
+      <a href="https://wa.me/5492494521418" target="_blank" rel="noopener" class="gp-footer-block gp-footer-link">
+        <i class="fa-brands fa-whatsapp gp-footer-icon"></i>
+        <span class="gp-footer-text">+54 9 249 4521418</span>
+      </a>
+
+      <!-- Email -->
+      <a href="mailto:info@gpadel.com.ar" class="gp-footer-block gp-footer-link">
+        <i class="fa-regular fa-envelope gp-footer-icon"></i>
+        <span class="gp-footer-text">info@gpadel.com.ar</span>
+      </a>
+
+      <!-- Dirección -->
+      <a href="https://www.google.com/maps?q=Alem+1015,+Tandil" target="_blank" rel="noopener" class="gp-footer-block gp-footer-link">
+        <i class="fa-solid fa-map-location-dot gp-footer-icon"></i>
+        <span class="gp-footer-text">
+          Alem 1015 – Tandil<br>Buenos Aires – Argentina
+        </span>
+      </a>
+
+    </div>
+
+    <!-- Redes sociales -->
+    <div class="gp-footer-social">
+      <a href="https://facebook.com/geneoscoop" target="_blank" rel="noopener"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="https://instagram.com/geneos.coop" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://twitter.com/GeneosCoop" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+      <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin-in"></i></a>
+    </div>
+
+    <div class="gp-footer-bottom">
+      DISEÑADO POR COOPERATIVA GENEOS LTDA.
+    </div>
+  </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
