--- a/pages/jugadores.html
+++ b/pages/jugadores.html
@@ -10,8 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap"
-    rel="stylesheet"
-  />
+    rel="stylesheet"/>
+
+  <!-- Boostrap -->    
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Librerías -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
@@ -136,7 +138,7 @@
 
       </div>
 
-      <!-- Footer tipo Airbnb (solo mobile) -->
+      <!-- Footer mobile-->
       <div class="gp-search-expand-foot">
         <button class="gp-search-btn gp-search-btn--mobile" type="button">
           <i class="fa-solid fa-magnifying-glass"></i> Buscar
@@ -212,43 +214,72 @@
 
 </main>
 
-<!-- FOOTER -->
-  <footer class="gp-footer">
-    <div class="gp-footer-top gp-container">
+<!-- FOOTER boostrap -->
+    <footer class="gp-footer bg-black text-white pt-5 pb-4">
+
+  <div class="container">
+
+    <!-- BLOQUES PRINCIPALES -->
+    <div class="row text-center mb-4">
+
       <!-- WhatsApp -->
-      <a href="https://wa.me/5492494521418" target="_blank" rel="noopener" class="gp-footer-block gp-footer-link">
-        <i class="fa-brands fa-whatsapp gp-footer-icon"></i>
-        <span class="gp-footer-text">+54 9 249 4521418</span>
-      </a>
+      <div class="col-12 col-md-4 mb-4 mb-md-0">
+        <a href="https://wa.me/5492494521418"
+           target="_blank"
+           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+          <i class="fa-brands fa-whatsapp gp-footer-icon mb-2"></i>
+          <span class="gp-footer-text">+54 9 249 4521418</span>
+        </a>
+      </div>
 
       <!-- Email -->
-      <a href="mailto:info@gpadel.com.ar" class="gp-footer-block gp-footer-link">
-        <i class="fa-regular fa-envelope gp-footer-icon"></i>
-        <span class="gp-footer-text">info@gpadel.com.ar</span>
-      </a>
+      <div class="col-12 col-md-4 mb-4 mb-md-0">
+        <a href="mailto:info@gpadel.com.ar"
+           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+          <i class="fa-regular fa-envelope gp-footer-icon mb-2"></i>
+          <span class="gp-footer-text">info@gpadel.com.ar</span>
+        </a>
+      </div>
 
       <!-- Dirección -->
-      <a href="https://www.google.com/maps?q=Alem+1015,+Tandil" target="_blank" rel="noopener" class="gp-footer-block gp-footer-link">
-        <i class="fa-solid fa-map-location-dot gp-footer-icon"></i>
-        <span class="gp-footer-text">
-          Alem 1015 – Tandil<br>Buenos Aires – Argentina
-        </span>
+      <div class="col-12 col-md-4">
+        <a href="https://www.google.com/maps?q=Alem+1015,+Tandil"
+           target="_blank"
+           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+          <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2"></i>
+          <span class="gp-footer-text text-center">
+            Alem 1015 – Tandil<br>
+            Buenos Aires – Argentina
+          </span>
+        </a>
+      </div>
+
+    </div>
+
+    <!-- REDES SOCIALES -->
+    <div class="d-flex justify-content-center gap-4 mb-3">
+      <a href="https://facebook.com/geneoscoop" target="_blank" class="text-white">
+        <i class="fa-brands fa-facebook-f"></i>
       </a>
-
+      <a href="https://instagram.com/geneos.coop" target="_blank" class="text-white">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="https://twitter.com/GeneosCoop" target="_blank" class="text-white">
+        <i class="fa-brands fa-x-twitter"></i>
+      </a>
+      <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" class="text-white">
+        <i class="fa-brands fa-linkedin-in"></i>
+      </a>
     </div>
 
-    <!-- Redes sociales -->
-    <div class="gp-footer-social">
-      <a href="https://facebook.com/geneoscoop" target="_blank" rel="noopener"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="https://instagram.com/geneos.coop" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://twitter.com/GeneosCoop" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
-      <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin-in"></i></a>
-    </div>
-
-    <div class="gp-footer-bottom">
+    <!-- COPYRIGHT -->
+    <div class="text-center small opacity-75">
       DISEÑADO POR COOPERATIVA GENEOS LTDA.
     </div>
-  </footer>
+
+  </div>
+</footer>
+
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
