--- a/pages/score-type.html
+++ b/pages/score-type.html
@@ -8,6 +8,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
+
+   <!-- Boostrap -->    
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -45,7 +49,6 @@
   </nav>
 </header>
 
-<div class="gp-contact-form-wrapper"></div>
     <section class="gp-pages-hero">
             <div class="gp-container">
             <h1>
@@ -78,35 +81,69 @@
         </div>
     </section>
  </div>  
-<!-- FOOTER -->
-<footer class="gp-footer">
-  <div class="gp-footer-top gp-container">
+<!-- FOOTER Boostrap-->
+  <footer class="gp-footer bg-black text-white pt-5 pb-4">
 
-    <a href="https://wa.me/5492494521418" class="gp-footer-block gp-footer-link">
-      <i class="fa-brands fa-whatsapp gp-footer-icon"></i>
-      <span>+54 9 249 4521418</span>
-    </a>
+  <div class="container">
 
-    <a href="mailto:info@gpadel.com.ar" class="gp-footer-block gp-footer-link">
-      <i class="fa-regular fa-envelope gp-footer-icon"></i>
-      <span>info@gpadel.com.ar</span>
-    </a>
+    <!-- BLOQUES PRINCIPALES -->
+    <div class="row text-center mb-4">
 
-    <a href="https://www.google.com/maps?q=Alem+1015,+Tandil" class="gp-footer-block gp-footer-link">
-      <i class="fa-solid fa-map-location-dot gp-footer-icon"></i>
-      <span>Alem 1015 – Tandil<br>Buenos Aires – Argentina</span>
-    </a>
-  </div>
+      <!-- WhatsApp -->
+      <div class="col-12 col-md-4 mb-4 mb-md-0">
+        <a href="https://wa.me/5492494521418"
+           target="_blank"
+           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+          <i class="fa-brands fa-whatsapp gp-footer-icon mb-2"></i>
+          <span class="gp-footer-text">+54 9 249 4521418</span>
+        </a>
+      </div>
 
-  <div class="gp-footer-social">
-    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-  </div>
+      <!-- Email -->
+      <div class="col-12 col-md-4 mb-4 mb-md-0">
+        <a href="mailto:info@gpadel.com.ar"
+           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+          <i class="fa-regular fa-envelope gp-footer-icon mb-2"></i>
+          <span class="gp-footer-text">info@gpadel.com.ar</span>
+        </a>
+      </div>
 
-  <div class="gp-footer-bottom">
-    DISEÑADO POR COOPERATIVA GENEOS LTDA.
+      <!-- Dirección -->
+      <div class="col-12 col-md-4">
+        <a href="https://www.google.com/maps?q=Alem+1015,+Tandil"
+           target="_blank"
+           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+          <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2"></i>
+          <span class="gp-footer-text text-center">
+            Alem 1015 – Tandil<br>
+            Buenos Aires – Argentina
+          </span>
+        </a>
+      </div>
+
+    </div>
+
+    <!-- REDES SOCIALES -->
+    <div class="d-flex justify-content-center gap-4 mb-3">
+      <a href="https://facebook.com/geneoscoop" target="_blank" class="text-white">
+        <i class="fa-brands fa-facebook-f"></i>
+      </a>
+      <a href="https://instagram.com/geneos.coop" target="_blank" class="text-white">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="https://twitter.com/GeneosCoop" target="_blank" class="text-white">
+        <i class="fa-brands fa-x-twitter"></i>
+      </a>
+      <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" class="text-white">
+        <i class="fa-brands fa-linkedin-in"></i>
+      </a>
+    </div>
+
+    <!-- COPYRIGHT -->
+    <div class="text-center small opacity-75">
+      DISEÑADO POR COOPERATIVA GENEOS LTDA.
+    </div>
+
   </div>
 </footer>
 
