Ajustes de boostrap en footer + estilos propios

--- a/pages/jugadores.html
+++ b/pages/jugadores.html
@@ -42,9 +42,10 @@
     </a>
 
     <nav class="gp-nav">
-      <a href="./quiero-reservar.html" class="gp-nav-link">Quiero reservar</a>
+      <a href="./reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
       <a href="./score.html" class="gp-nav-link">Quiero marcar</a>
       <a href="#como-funciona" class="gp-nav-link">¿Cómo funciona?</a>
+      <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
       <a href="./contacto.html" class="gp-nav-link">Contacto</a>
     </nav>
 
@@ -64,7 +65,7 @@
 
   <!-- NAV MOBILE -->
   <nav class="gp-nav-mobile" id="gpMobileNav">
-    <a href="./quiero-reservar.html">Quiero reservar</a>
+    <a href="./reservar-cancha.html">Reservar Cancha</a>
     <a href="./score.html">Quiero marcar</a>
     <a href="#como-funciona">¿Cómo funciona?</a>
     <a href="./canchas-ligas.html">Canchas o Ligas</a>
@@ -159,7 +160,7 @@
       <p>Organizá tus partidos y turnos desde un solo lugar.</p>
 
       <div class="gp-hero-cta">
-        <a href="./quiero-reservar.html" class="gp-btn gp-btn--primary">Quiero reservar</a>
+        <a href="./reservar-cancha.html" class="gp-btn gp-btn--primary">Reservar Cancha</a>
         <a href="./score.html" class="gp-btn gp-btn--secondary">Quiero marcar</a>
       </div>
     </div>
