--- a/pages/score-type.html
+++ b/pages/score-type.html
@@ -23,9 +23,10 @@
     </a>
 
     <nav class="gp-nav">
-      <a href="quiero-reservar.html" class="gp-nav-link">Quiero reservar</a>
+      <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
       <a href="score.html" class="gp-nav-link gp-nav-link--active">Quiero marcar</a>
       <a href="como-funciona.html" class="gp-nav-link">¿Cómo funciona?</a>
+      <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
       <a href="contacto.html" class="gp-nav-link">Contacto</a>
     </nav>
 
@@ -41,7 +42,7 @@
   </div>
 
   <nav class="gp-nav-mobile" id="gpMobileNav">
-    <a href="quiero-reservar.html">Quiero reservar</a>
+    <a href="reservar-cancha.html">Reservar Cancha</a>
     <a href="score.html">Quiero marcar</a>
     <a href="como-funciona.html">¿Cómo funciona?</a>
     <a href="canchas-ligas.html">Canchas o Ligas</a>
