--- a/pages/canchas-ligas.html
+++ b/pages/canchas-ligas.html
@@ -15,45 +15,33 @@
 <body>
   
   <!-- NAVBAR -->
-  <header class="gp-header">
-    <div class="gp-container gp-header-inner">
-      <a href="../index.html" class="gp-logo-link">
-        <img src="../img/gpadel-logo.svg" alt="GPADÉL - Plataforma de gestión de pádel" class="gp-logo-img">
-      </a>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>GPADEL - Cancha y Ligas</title>
 
-      <!-- Navegación desktop -->
-      <nav class="gp-nav">
-        <a href="quiero-reservar.html" class="gp-nav-link">Quiero reservar</a>
-        <a href="score.html" class="gp-nav-link">Quiero marcar</a>
-        <a href="como-funciona.html" class="gp-nav-link">¿Cómo funciona?</a>
-        <a href="contacto.html" class="gp-nav-link">Contacto</a>
-      </nav>
-      <div class="gp-header-actions">
-        <a href="canchas-ligas.html" class="gp-header-cta">Canchas o Ligas</a>
-        <a href="login.html" class="gp-header-icon" aria-label="Iniciar sesión">
-          <i class="fa-regular fa-user"></i>
-        </a>
+  <!-- Tipografía -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap"
+    rel="stylesheet"/>
 
-        <!-- Botón hamburguesa (solo se ve en mobile utilicé un JavaScript base ya que desconozco armarlo) -->
-        <button class="gp-header-burger"
-                id="gpMenuToggle"
-                aria-label="Abrir menú"
-                aria-expanded="false">
-          <i class="fa-solid fa-bars"></i>
-          <i class="fa-solid fa-xmark"></i>
-        </button>
-      </div>
-    </div>
+  <!-- Boostrap -->    
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
-    <nav class="gp-nav-mobile" id="gpMobileNav">
-      <a href="quiero-reservar.html">Quiero reservar</a>
-      <a href="score.html">Quiero marcar</a>
-      <a href="como-funciona.html">¿Cómo funciona?</a>
-      <a href="canchas-ligas.html">Canchas o Ligas</a>
-      <a href="contacto.html">Contacto</a>
-    </nav>
-  </header>
+  <!-- Librerías -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- Estilos propios -->
+  <link rel="stylesheet" href="../css/style.css" />
+
+  <!-- Color input search -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  
+
+</head>
 
   <!-- HERO CONTACTO (similar a Geneos, texto + bajada) Arme un hero generico para paginas-->
   <section class="gp-pages-hero">
@@ -141,6 +129,11 @@
     </div>
 
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
+
+  <script src="../js/main.js"></script>
 
   </body>
 </html>
