--- a/pages/como-funciona.html
+++ b/pages/como-funciona.html
@@ -1,15 +1,30 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cómo funciona - GPADEL - Plataforma de Gestión de Padel</title>
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>GPADEL - Como Funciona</title>
 
-   <!-- Boostrap -->    
+  <!-- Tipografía -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap"
+    rel="stylesheet"/>
+
+  <!-- Boostrap -->    
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Librerías -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- Estilos propios -->
+  <link rel="stylesheet" href="../css/style.css" />
+
+  <!-- Color input search -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  
 
 </head>
 <body>
@@ -23,9 +38,10 @@
 
       <!-- Navegación desktop -->
       <nav class="gp-nav">
-        <a href="quiero-reservar.html" class="gp-nav-link">Quiero reservar</a>
+        <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
         <a href="score.html" class="gp-nav-link">Quiero marcar</a>
         <a href="como-funciona.html" class="gp-nav-link gp-nav-link--active">¿Cómo funciona?</a>
+        <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
         <a href="contacto.html" class="gp-nav-link">Contacto</a>
       </nav>
       <div class="gp-header-actions">
@@ -47,7 +63,7 @@
 
     <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
     <nav class="gp-nav-mobile" id="gpMobileNav">
-      <a href="quiero-reservar.html">Quiero reservar</a>
+      <a href="reservar-cancha.html">Reservar Cancha</a>
       <a href="score.html">Quiero marcar</a>
       <a href="como-funciona.html">¿Cómo funciona?</a>
       <a href="canchas-ligas.html">Canchas o Ligas</a>
@@ -139,6 +155,11 @@
 
   
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
+
+  <script src="../js/main.js"></script>
 
   </body>
 </html>
