--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,13 +3,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contacto - GPADEL - Plataforma de Gestión de Padel</title>
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <title>Contacto - GPADEL</title>
+
+  <!-- Boostrap -->    
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Tipografía -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
 
-   <!-- Boostrap -->    
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Estilos propios -->
+  <link rel="stylesheet" href="../css/style.css" />
+
+    <!-- Color input search -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
 </head>
 <body>
@@ -23,9 +33,10 @@
 
       <!-- Navegación desktop -->
       <nav class="gp-nav">
-        <a href="quiero-reservar.html" class="gp-nav-link">Quiero reservar</a>
+        <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
         <a href="score.html" class="gp-nav-link">Quiero marcar</a>
         <a href="como-funciona.html" class="gp-nav-link">¿Cómo funciona?</a>
+        <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
         <a href="contacto.html" class="gp-nav-link gp-nav-link--active">Contacto</a>
       </nav>
       <div class="gp-header-actions">
@@ -47,7 +58,7 @@
 
     <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
     <nav class="gp-nav-mobile" id="gpMobileNav">
-      <a href="quiero-reservar.html">Quiero reservar</a>
+      <a href="reservar-cancha.html">Reservar Cancha</a>
       <a href="score.html">Quiero marcar</a>
       <a href="como-funciona.html">¿Cómo funciona?</a>
       <a href="canchas-ligas.html">Canchas o Ligas</a>
@@ -204,31 +215,10 @@
   </div>
 </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
 
-    <!-- Redes sociales -->
-    <div class="gp-footer-social">
-      <a href="https://facebook.com/geneoscoop" target="_blank" rel="noopener"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="https://instagram.com/geneos.coop" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://twitter.com/GeneosCoop" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
-      <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin-in"></i></a>
-    </div>
+  <script src="../js/main.js"></script>
 
-  </footer>
-
-  <!-- JS menú hamburguesa -->
-  <script>
-    (function () {
-      const toggle = document.getElementById('gpMenuToggle');
-      const mobileNav = document.getElementById('gpMobileNav');
-
-      if (!toggle || !mobileNav) return;
-
-      toggle.addEventListener('click', function () {
-        const isOpen = mobileNav.classList.toggle('gp-nav-mobile--open');
-        toggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
-        toggle.classList.toggle('is-open', isOpen);
-      });
-    })();
-  </script>
 </body>
 </html>
