--- a/pages/inscripcion-torneos.html
+++ b/pages/inscripcion-torneos.html
@@ -3,13 +3,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Iniciar Sesión - GPADEL - Plataforma de Gestión de Padel</title>
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <title>Score - GPADEL</title>
+
+  <!-- Boostrap -->    
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Tipografía -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
 
-   <!-- Boostrap -->    
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Estilos propios -->
+  <link rel="stylesheet" href="../css/style.css" />
+
+    <!-- Color input search -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
 </head>
 <body>
@@ -26,7 +36,7 @@
         <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
         <a href="score.html" class="gp-nav-link">Quiero marcar</a>
         <a href="como-funciona.html" class="gp-nav-link">¿Cómo funciona?</a>
-        <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
+        <a href="inscripcion-torneos.html" class="gp-nav-link--active">Torneos</a>
         <a href="contacto.html" class="gp-nav-link">Contacto</a>
       </nav>
       <div class="gp-header-actions">
@@ -59,8 +69,8 @@
   <!-- HERO CONTACTO (similar a Geneos, texto + bajada) Arme un hero generico para paginas-->
   <section class="gp-pages-hero">
     <div class="gp-container">
-      <h5>ACCESO A LA PLATAFORMA</h5>
-      <h1>Inicie Sesión</h1>
+      <h5>INSCRIPCIÓN</h5>
+      <h1>Torneos</h1>
     </div>
   </section>
 
