--- a/pages/score.html
+++ b/pages/score.html
@@ -1,15 +1,26 @@
 <!doctype html>
 <html lang="es">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Quiero reservar - GPADEL - Plataforma de Gestión de Padel</title>
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <title>Score - GPADEL</title>
+
+  <!-- Boostrap -->    
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Tipografía -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
 
-   <!-- Boostrap -->    
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Estilos propios -->
+  <link rel="stylesheet" href="../css/style.css" />
+
+    <!-- Color input search -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
 </head>
 <body>
@@ -23,9 +34,10 @@
 
       <!-- Navegación desktop -->
       <nav class="gp-nav">
-        <a href="quiero-reservar.html" class="gp-nav-link">Quiero reservar</a>
+        <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
         <a href="score.html" class="gp-nav-link gp-nav-link--active">Quiero marcar</a>
         <a href="como-funciona.html" class="gp-nav-link">¿Cómo funciona?</a>
+        <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
         <a href="contacto.html" class="gp-nav-link">Contacto</a>
       </nav>
       <div class="gp-header-actions">
@@ -47,7 +59,7 @@
 
     <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
     <nav class="gp-nav-mobile" id="gpMobileNav">
-      <a href="quiero-reservar.html">Quiero reservar</a>
+      <a href="reservar-cancha.html">Reservar Cancha</a>
       <a href="score.html">Quiero marcar</a>
       <a href="como-funciona.html">¿Cómo funciona?</a>
       <a href="canchas-ligas.html">Canchas o Ligas</a>
@@ -74,79 +86,67 @@
 
 <!-- FOOTER (boostrap) -->
   <footer class="gp-footer bg-black text-white pt-5 pb-4">
+      <div class="container">
 
-  <div class="container">
+        <!-- BLOQUES PRINCIPALES -->
+        <div class="row text-center mb-4">
 
-    <!-- BLOQUES PRINCIPALES -->
-    <div class="row text-center mb-4">
+          <!-- WhatsApp -->
+          <div class="col-12 col-md-4 mb-4 mb-md-0">
+            <a href="https://wa.me/5492494521418"
+              target="_blank"
+              class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+              <i class="fa-brands fa-whatsapp gp-footer-icon mb-2"></i>
+              <span class="gp-footer-text">+54 9 249 4521418</span>
+            </a>
+          </div>
 
-      <!-- WhatsApp -->
-      <div class="col-12 col-md-4 mb-4 mb-md-0">
-        <a href="https://wa.me/5492494521418"
-           target="_blank"
-           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-          <i class="fa-brands fa-whatsapp gp-footer-icon mb-2"></i>
-          <span class="gp-footer-text">+54 9 249 4521418</span>
-        </a>
+          <!-- Email -->
+          <div class="col-12 col-md-4 mb-4 mb-md-0">
+            <a href="mailto:info@gpadel.com.ar"
+              class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+              <i class="fa-regular fa-envelope gp-footer-icon mb-2"></i>
+              <span class="gp-footer-text">info@gpadel.com.ar</span>
+            </a>
+          </div>
+
+          <!-- Dirección -->
+          <div class="col-12 col-md-4">
+            <a href="https://www.google.com/maps?q=Alem+1015,+Tandil"
+              target="_blank"
+              class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+              <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2"></i>
+              <span class="gp-footer-text text-center">
+                Alem 1015 – Tandil<br>
+                Buenos Aires – Argentina
+              </span>
+            </a>
+          </div>
+
+        </div>
+
+        <!-- REDES SOCIALES -->
+        <div class="d-flex justify-content-center gap-4 mb-3">
+          <a href="https://facebook.com/geneoscoop" target="_blank" class="text-white">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a href="https://instagram.com/geneos.coop" target="_blank" class="text-white">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="https://twitter.com/GeneosCoop" target="_blank" class="text-white">
+            <i class="fa-brands fa-x-twitter"></i>
+          </a>
+          <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" class="text-white">
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+        </div>
+
+        <!-- COPYRIGHT -->
+        <div class="text-center small opacity-75">
+          DISEÑADO POR COOPERATIVA GENEOS LTDA.
+        </div>
+
       </div>
-
-      <!-- Email -->
-      <div class="col-12 col-md-4 mb-4 mb-md-0">
-        <a href="mailto:info@gpadel.com.ar"
-           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-          <i class="fa-regular fa-envelope gp-footer-icon mb-2"></i>
-          <span class="gp-footer-text">info@gpadel.com.ar</span>
-        </a>
-      </div>
-
-      <!-- Dirección -->
-      <div class="col-12 col-md-4">
-        <a href="https://www.google.com/maps?q=Alem+1015,+Tandil"
-           target="_blank"
-           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-          <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2"></i>
-          <span class="gp-footer-text text-center">
-            Alem 1015 – Tandil<br>
-            Buenos Aires – Argentina
-          </span>
-        </a>
-      </div>
-
-    </div>
-
-    <!-- REDES SOCIALES -->
-    <div class="d-flex justify-content-center gap-4 mb-3">
-      <a href="https://facebook.com/geneoscoop" target="_blank" class="text-white">
-        <i class="fa-brands fa-facebook-f"></i>
-      </a>
-      <a href="https://instagram.com/geneos.coop" target="_blank" class="text-white">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-      <a href="https://twitter.com/GeneosCoop" target="_blank" class="text-white">
-        <i class="fa-brands fa-x-twitter"></i>
-      </a>
-      <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" class="text-white">
-        <i class="fa-brands fa-linkedin-in"></i>
-      </a>
-    </div>
-
-    <!-- COPYRIGHT -->
-    <div class="text-center small opacity-75">
-      DISEÑADO POR COOPERATIVA GENEOS LTDA.
-    </div>
-
-  </div>
-</footer>
-
-
-    <!-- Redes sociales -->
-    <div class="gp-footer-social">
-      <a href="https://facebook.com/geneoscoop" target="_blank" rel="noopener"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="https://instagram.com/geneos.coop" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://twitter.com/GeneosCoop" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
-      <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin-in"></i></a>
-    </div>
-
   </footer>
 
   </body>
