Limpieza y ajustes en css

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
 </head>
-<body>
+<body class="gp-layout gp-page-contact">
   
   <!-- NAVBAR -->
   <header class="gp-header">
@@ -34,8 +34,8 @@
       <!-- Navegación desktop -->
       <nav class="gp-nav">
         <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
-        <a href="score.html" class="gp-nav-link">Quiero marcar</a>
-        <a href="como-funciona.html" class="gp-nav-link">¿Cómo funciona?</a>
+        <a href="score.html" class="gp-nav-link">Marcador Gpadel</a>
+        <a href="ayuda-jugadores.html" class="gp-nav-link">Ayuda</a>
         <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
         <a href="contacto.html" class="gp-nav-link gp-nav-link--active">Contacto</a>
       </nav>
@@ -59,8 +59,8 @@
     <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
     <nav class="gp-nav-mobile" id="gpMobileNav">
       <a href="reservar-cancha.html">Reservar Cancha</a>
-      <a href="score.html">Quiero marcar</a>
-      <a href="como-funciona.html">¿Cómo funciona?</a>
+      <a href="score.html">Marcador Gpadel</a>
+      <a href="ayuda-jugadores.html">Ayuda</a>
       <a href="canchas-ligas.html">Canchas o Ligas</a>
       <a href="contacto.html">Contacto</a>
     </nav>
