--- a/pages/inscripcion-torneos.html
+++ b/pages/inscripcion-torneos.html
@@ -34,9 +34,9 @@
       <!-- Navegación desktop -->
       <nav class="gp-nav">
         <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
-        <a href="score.html" class="gp-nav-link">Quiero marcar</a>
-        <a href="como-funciona.html" class="gp-nav-link">¿Cómo funciona?</a>
+        <a href="score.html" class="gp-nav-link">Marcador Gpadel</a>
         <a href="inscripcion-torneos.html" class="gp-nav-link--active">Torneos</a>
+        <a href="ayuda-jugadores.html" class="gp-nav-link">Ayuda</a>
         <a href="contacto.html" class="gp-nav-link">Contacto</a>
       </nav>
       <div class="gp-header-actions">
@@ -59,8 +59,8 @@
     <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
     <nav class="gp-nav-mobile" id="gpMobileNav">
       <a href="reservar-cancha.html">Reservar Cancha</a>
-      <a href="score.html">Quiero marcar</a>
-      <a href="como-funciona.html">¿Cómo funciona?</a>
+      <a href="score.html">Marcador Gpadel</a>
+      <a href="ayuda-jugadores.html">Ayuda</a>
       <a href="canchas-ligas.html">Canchas o Ligas</a>
       <a href="contacto.html">Contacto</a>
     </nav>
@@ -139,18 +139,5 @@
 
   </div>
 </footer>
-
-
-    <!-- Redes sociales -->
-    <div class="gp-footer-social">
-      <a href="https://facebook.com/geneoscoop" target="_blank" rel="noopener"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="https://instagram.com/geneos.coop" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://twitter.com/GeneosCoop" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
-      <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin-in"></i></a>
-    </div>
-
-
-  </footer>
-
   </body>
 </html>
