--- a/pages/jugadores.html
+++ b/pages/jugadores.html
@@ -43,9 +43,9 @@
 
     <nav class="gp-nav">
       <a href="./reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
-      <a href="./score.html" class="gp-nav-link">Quiero marcar</a>
-      <a href="#como-funciona" class="gp-nav-link">¿Cómo funciona?</a>
+      <a href="./score.html" class="gp-nav-link">Marcador Gpadel</a>
       <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
+      <a href="ayuda-jugadores.html" class="gp-nav-link">Ayuda</a>
       <a href="./contacto.html" class="gp-nav-link">Contacto</a>
     </nav>
 
@@ -66,8 +66,8 @@
   <!-- NAV MOBILE -->
   <nav class="gp-nav-mobile" id="gpMobileNav">
     <a href="./reservar-cancha.html">Reservar Cancha</a>
-    <a href="./score.html">Quiero marcar</a>
-    <a href="#como-funciona">¿Cómo funciona?</a>
+    <a href="./score.html">Marcador Gpadel</a>
+    <a href="#como-funciona">Ayuda</a>
     <a href="./canchas-ligas.html">Canchas o Ligas</a>
     <a href="./contacto.html">Contacto</a>
   </nav>
@@ -161,7 +161,7 @@
 
       <div class="gp-hero-cta">
         <a href="./reservar-cancha.html" class="gp-btn gp-btn--primary">Reservar Cancha</a>
-        <a href="./score.html" class="gp-btn gp-btn--secondary">Quiero marcar</a>
+        <a href="./score.html" class="gp-btn gp-btn--secondary">Marcador Gpadel</a>
       </div>
     </div>
 
@@ -175,7 +175,7 @@
 <!-- COMO FUNCIONA -->
 <section id="como-funciona" class="gp-section">
   <div class="gp-container">
-    <h2 class="gp-section-title">¿Cómo funciona?</h2>
+    <h2 class="gp-section-title">Ayuda</h2>
 
     <div class="gp-steps">
 
