--- a/pages/score.html
+++ b/pages/score.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body class="gp-layout">
+<body class="gp-layout gp-page-score">
 
   <!-- HEADER -->
   <header class="gp-header">
@@ -33,9 +33,9 @@
 
       <nav class="gp-nav">
         <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
-        <a href="score.html" class="gp-nav-link gp-nav-link--active">Quiero marcar</a>
-        <a href="como-funciona.html" class="gp-nav-link">¿Cómo funciona?</a>
+        <a href="score.html" class="gp-nav-link gp-nav-link--active">Marcador Gpadel</a>
         <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
+        <a href="ayuda-jugadores.html" class="gp-nav-link">Ayuda</a>
         <a href="contacto.html" class="gp-nav-link">Contacto</a>
       </nav>
 
@@ -58,8 +58,8 @@
     <!-- NAV MOBILE -->
     <nav class="gp-nav-mobile" id="gpMobileNav">
       <a href="reservar-cancha.html">Reservar Cancha</a>
-      <a href="score.html">Quiero marcar</a>
-      <a href="como-funciona.html">¿Cómo funciona?</a>
+      <a href="score.html">Marcador Gpadel</a>
+      <a href="ayuda-jugadores.html">Ayuda</a>
       <a href="canchas-ligas.html">Canchas o Ligas</a>
       <a href="contacto.html">Contacto</a>
     </nav>
