--- a/pages/login.html
+++ b/pages/login.html
@@ -1,16 +1,30 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Iniciar Sesión - GPADEL - Plataforma de Gestión de Padel</title>
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>GPADEL - Plataforma de Gestión de Pádel</title>
 
-   <!-- Boostrap -->    
+  <!-- Tipografía -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap"
+    rel="stylesheet"/>
+
+  <!-- Boostrap -->    
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Librerías -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- Estilos propios -->
+  <link rel="stylesheet" href="../css/style.css" />
+
+  <!-- Color input search -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  
 </head>
 <body>
   
@@ -24,8 +38,8 @@
       <!-- Navegación desktop -->
       <nav class="gp-nav">
         <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
-        <a href="score.html" class="gp-nav-link">Quiero marcar</a>
-        <a href="como-funciona.html" class="gp-nav-link">¿Cómo funciona?</a>
+        <a href="score.html" class="gp-nav-link">Marcador Gpadel</a>
+        <a href="ayuda-jugadores.html" class="gp-nav-link">Ayuda</a>
         <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
         <a href="contacto.html" class="gp-nav-link">Contacto</a>
       </nav>
@@ -49,8 +63,8 @@
     <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
     <nav class="gp-nav-mobile" id="gpMobileNav">
       <a href="reservar-cancha.html">Reservar Cancha</a>
-      <a href="score.html">Quiero marcar</a>
-      <a href="como-funciona.html">¿Cómo funciona?</a>
+      <a href="score.html">Marcador Gpadel</a>
+      <a href="ayuda-jugadores.html">Ayuda</a>
       <a href="canchas-ligas.html">Canchas o Ligas</a>
       <a href="contacto.html">Contacto</a>
     </nav>
