--- a/pages/reservar-cancha.html
+++ b/pages/reservar-cancha.html
@@ -34,9 +34,9 @@
       <!-- Navegación desktop -->
       <nav class="gp-nav">
         <a href="reservar-cancha.html" class="gp-nav-link gp-nav-link--active">Reservar Cancha</a>
-        <a href="score.html" class="gp-nav-link">Quiero marcar</a>
-        <a href="como-funciona" class="gp-nav-link">¿Cómo funciona?</a>
+        <a href="score.html" class="gp-nav-link">Marcador Gpadel</a>
         <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
+        <a href="ayuda-jugadores.html" class="gp-nav-link">Ayuda</a>
         <a href="contacto.html" class="gp-nav-link">Contacto</a>
       </nav>
       <div class="gp-header-actions">
@@ -59,8 +59,9 @@
     <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
     <nav class="gp-nav-mobile" id="gpMobileNav">
       <a href="reservar-cancha.html">Reservar Cancha</a>
-      <a href="score.html">Quiero marcar</a>
-      <a href="como-funciona.html">¿Cómo funciona?</a>
+      <a href="score.html">Marcador Gpadel</a>
+      <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
+      <a href="ayuda-jugadores.html">Ayuda</a>
       <a href="canchas-ligas.html">Canchas o Ligas</a>
       <a href="contacto.html">Contacto</a>
     </nav>
