--- a/pages/score-type.html
+++ b/pages/score-type.html
@@ -3,15 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Marcador - GPADEL</title>
+  <title>Score - GPADEL</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="../css/style.css">
-
-   <!-- Boostrap -->    
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Tipografía -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Iconos -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- Estilos propios -->
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -24,9 +30,9 @@
 
     <nav class="gp-nav">
       <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
-      <a href="score.html" class="gp-nav-link gp-nav-link--active">Quiero marcar</a>
-      <a href="como-funciona.html" class="gp-nav-link">¿Cómo funciona?</a>
+      <a href="score.html" class="gp-nav-link gp-nav-link--active">Marcador Gpadel</a>
       <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
+      <a href="ayuda-jugadores.html" class="gp-nav-link">Ayuda</a>
       <a href="contacto.html" class="gp-nav-link">Contacto</a>
     </nav>
 
@@ -43,8 +49,8 @@
 
   <nav class="gp-nav-mobile" id="gpMobileNav">
     <a href="reservar-cancha.html">Reservar Cancha</a>
-    <a href="score.html">Quiero marcar</a>
-    <a href="como-funciona.html">¿Cómo funciona?</a>
+    <a href="score.html">Marcador Gpadel</a>
+    <a href="ayuda-jugadores.html">Ayuda</a>
     <a href="canchas-ligas.html">Canchas o Ligas</a>
     <a href="contacto.html">Contacto</a>
   </nav>
