Ajustes css reserva de canchas

--- a/pages/reservar-cancha.html
+++ b/pages/reservar-cancha.html
@@ -144,7 +144,7 @@
 
               <!-- TÍTULO -->
               <div class="gp-results-head">
-                <h2>Canchas disponibles para esta fecha</h2>
+                <h2>Canchas disponibles para hoy</h2>
               </div>
 
               <!-- GRID DE CANCHAS -->
