ajustes nav bar mobile

--- a/pages/reservar-cancha.html
+++ b/pages/reservar-cancha.html
@@ -57,14 +57,24 @@
     </div>
 
     <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
-    <nav class="gp-nav-mobile" id="gpMobileNav">
-      <a href="reservar-cancha.html">Reservar Cancha</a>
-      <a href="score.html">Marcador Gpadel</a>
-      <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
-      <a href="ayuda-jugadores.html">Ayuda</a>
-      <a href="canchas-ligas.html">Canchas o Ligas</a>
-      <a href="contacto.html">Contacto</a>
-    </nav>
+        <nav class="gp-nav-mobile" id="gpMobileNav">
+
+          <a href="reservar-cancha.html">Reservar Cancha</a>
+          <a href="score.html">Marcador Gpadel</a>
+          <a href="inscripcion-torneos.html">Torneos</a>
+          <a href="ayuda-jugadores.html">Ayuda</a>
+          <a href="contacto.html">Contacto</a>
+
+          <!-- Separador visual -->
+          <div class="gp-nav-mobile-divider"></div>
+
+          <!-- Cambio de rol / contexto -->
+          <a href="canchas-ligas.html" class="gp-nav-mobile-switch">
+            <i class="fa-solid fa-right-from-bracket"></i>
+            Canchas o Ligas
+          </a>
+
+        </nav>
   </header>
 
   <!-- HERO CONTACTO (similar a Geneos, texto + bajada) Arme un hero generico para paginas-->
