--- a/pages/inscripcion-torneos.html
+++ b/pages/inscripcion-torneos.html
@@ -25,7 +25,7 @@
 <body>
   
   <!-- NAVBAR -->
-  <header class="gp-header">
+<header class="gp-header">
     <div class="gp-container gp-header-inner">
       <a href="../index.html" class="gp-logo-link">
         <img src="../img/gpadel-logo.svg" alt="GPADÉL - Plataforma de gestión de pádel" class="gp-logo-img">
@@ -33,7 +33,7 @@
 
       <!-- Navegación desktop -->
       <nav class="gp-nav">
-        <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
+        <a href="reservar-cancha.html" class="gp-nav-link gp-nav-link">Reservar Cancha</a>
         <a href="score.html" class="gp-nav-link">Marcador Gpadel</a>
         <a href="inscripcion-torneos.html" class="gp-nav-link--active">Torneos</a>
         <a href="ayuda-jugadores.html" class="gp-nav-link">Ayuda</a>
@@ -57,13 +57,24 @@
     </div>
 
     <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
-    <nav class="gp-nav-mobile" id="gpMobileNav">
-      <a href="reservar-cancha.html">Reservar Cancha</a>
-      <a href="score.html">Marcador Gpadel</a>
-      <a href="ayuda-jugadores.html">Ayuda</a>
-      <a href="canchas-ligas.html">Canchas o Ligas</a>
-      <a href="contacto.html">Contacto</a>
-    </nav>
+        <nav class="gp-nav-mobile" id="gpMobileNav">
+
+          <a href="reservar-cancha.html">Reservar Cancha</a>
+          <a href="score.html">Marcador Gpadel</a>
+          <a href="inscripcion-torneos.html">Torneos</a>
+          <a href="ayuda-jugadores.html">Ayuda</a>
+          <a href="contacto.html">Contacto</a>
+
+          <!-- Separador visual -->
+          <div class="gp-nav-mobile-divider"></div>
+
+          <!-- Cambio de rol / contexto -->
+          <a href="canchas-ligas.html" class="gp-nav-mobile-switch">
+            <i class="fa-solid fa-right-from-bracket"></i>
+            Canchas o Ligas
+          </a>
+
+        </nav>
   </header>
 
   <!-- HERO CONTACTO (similar a Geneos, texto + bajada) Arme un hero generico para paginas-->
