Ajustando estilo de tipo score

--- a/pages/score-type.html
+++ b/pages/score-type.html
@@ -74,38 +74,34 @@
         </nav>
   </header>
 
-    <section class="gp-pages-hero">
-            <div class="gp-container">
-            <h1>
-                Marcador de padel en vivo
-            </h1>
-            <h5>
-                Elegí la modalidad del partido
-            </h5>
-                <p><strong>Código:</strong> 5EHEJK</p>
-            </div>
+<section class="gp-pages-hero">
+  <div class="gp-container">
+    <h1>Marcador de padel en vivo</h1>
+    <h5>Elegí la modalidad del partido</h5>
+    <p><strong>Código:</strong> 5EHEJK</p>
 
-        <div class="gp-hero-cta">
-            <div class="gp-modalidad-opciones">
-                <label class="gp-opcion-item">
-                    <input type="radio" name="modalidad" checked>
-                    <span>Partido a 3 sets</span>
-                </label>
+    <div class="gp-hero-cta">
+      <div class="gp-modalidad-opciones">
+        <label class="gp-opcion-item">
+          <input type="radio" name="modalidad" checked>
+          <span>Partido a 3 sets</span>
+        </label>
 
-                <label class="gp-opcion-item">
-                    <input type="radio" name="modalidad">
-                    <span>2 sets + super tie-break</span>
-                </label>
+        <label class="gp-opcion-item">
+          <input type="radio" name="modalidad">
+          <span>2 sets + super tie-break</span>
+        </label>
 
-                <p class="gp-modalidad-info">
-                    El super tie-break se juega cuando ambos equipos ganan un set (1–1), a 10 puntos y con diferencia mínima de 2.
-                </p>
+        <p class="gp-modalidad-info">
+          El super tie-break se juega cuando ambos equipos ganan un set (1–1), a 10 puntos y con diferencia mínima de 2.
+        </p>
 
-                <button class="gp-btn gp-btn--primary">Ir al marcador</button>
-            </div>
-        </div>
-    </section>
- </div>  
+        <button class="gp-btn gp-btn--primary">Ir al marcador</button>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- FOOTER Boostrap-->
   <footer class="gp-footer bg-black text-white pt-5 pb-4">
 
