Agregué auspiciantes a la pagina de jugadores

--- a/pages/jugadores.html
+++ b/pages/jugadores.html
@@ -185,7 +185,8 @@
 <!-- COMO FUNCIONA -->
 <section id="como-funciona" class="gp-section">
   <div class="gp-container">
-    <h2 class="gp-section-title">Ayuda</h2>
+    <p class="gp-kicker">Toda la gestion del PADEL en un solo lugar</p>
+    <h2 class="gp-section-title">¿CÓMO FUNCIONA?</h2>
 
     <div class="gp-steps">
 
@@ -222,6 +223,76 @@
     </div>
   </div>
 </section>
+
+
+<!-- AUSPICIANTES -->
+<section class="gp-section gp-sponsors" id="auspiciantes">
+  <div class="gp-container">
+
+    <p class="gp-sponsors-kicker">Nuestros auspiciantes</p>
+
+    <h2 class="gp-sponsors-title">
+      AUSPICIANTES & <span class="gp-sponsors-title-accent">PATROCINADORES</span>
+    </h2>
+
+    <!-- Grilla de logos -->
+    <div class="gp-sponsors-logos">
+
+      <!-- 1 -->
+      <a class="gp-sponsor" href="https://worldpadelcenter.com.ar/" target="_blank" rel="noopener">
+        <img src="../img/auspiciantes/1.png" alt="Auspiciantes 01">
+      </a>
+
+      <!-- 2 -->
+      <a class="gp-sponsor" href="https://ultimatepadel.com.ar/" target="_blank" rel="noopener">
+        <img src="../img/auspiciantes/2.png" alt="Auspiciantes 02">
+      </a>
+
+      <!-- 3 -->
+      <a class="gp-sponsor" href="https://www.instagram.com/padel_boxx/?hl=es" target="_blank" rel="noopener">
+        <img src="../img/auspiciantes/3.png" alt="Auspiciantes 03">
+      </a>
+
+      <!-- 4 -->
+      <a class="gp-sponsor" href="https://www.instagram.com/angastacopadel/" target="_blank" rel="noopener">
+        <img src="../img/auspiciantes/4.png" alt="Auspiciantes 04">
+      </a>
+
+      <!-- 5 -->
+      <a class="gp-sponsor" href="https://www.instagram.com/piedra_libre_padel/?hl=es" target="_blank" rel="noopener">
+        <img src="../img/auspiciantes/5.png" alt="Auspiciantes 05">
+      </a>
+
+      <!-- 6 -->
+      <a class="gp-sponsor" href="https://www.instagram.com/nucleopadel_/?hl=es" target="_blank" rel="noopener">
+        <img src="../img/auspiciantes/6.png" alt="Auspiciantes 06">
+      </a>
+
+      <!-- 7 -->
+      <a class="gp-sponsor" href="https://www.instagram.com/nexussport.tandil/?hl=es" target="_blank" rel="noopener">
+        <img src="../img/auspiciantes/7.png" alt="Auspiciantes 07">
+      </a>
+
+      <!-- 8 -->
+      <a class="gp-sponsor" href="https://www.instagram.com/picodeportestandil/?hl=es" target="_blank" rel="noopener">
+        <img src="../img/auspiciantes/8.png" alt="Auspiciantes 08">
+      </a>
+
+      <!-- 9 -->
+      <a class="gp-sponsor" href="https://www.instagram.com/barlay.padel/?hl=es" target="_blank" rel="noopener">
+        <img src="../img/auspiciantes/9.png" alt="Auspiciantes 09">
+      </a>
+
+      <!-- 10 -->
+      <a class="gp-sponsor" href="https://www.instagram.com/padel.company/?hl=es" target="_blank" rel="noopener">
+        <img src="../img/auspiciantes/10.png" alt="Auspiciantes 10">
+      </a>
+
+    </div>
+
+  </div>
+</section>
+
 
 </main>
 
