Ajustes al boton Reservar Cancha Version Mobile

--- a/pages/inscripcion-torneos.html
+++ b/pages/inscripcion-torneos.html
@@ -40,9 +40,11 @@
 
       <div class="gp-header-actions">
         <a href="canchas-ligas.html" class="gp-header-cta">Canchas o Ligas</a>
-        <a href="login.html" class="gp-header-icon" aria-label="Iniciar sesión">
-          <i class="fa-regular fa-user"></i>
-        </a>
+      <a href="login.html" class="gp-header-icon gp-header-icon--login" aria-label="Ingresar">
+        <span class="sign"><i class="fa-solid fa-right-to-bracket"></i></span>
+        <span class="text">Ingresar</span>
+      </a>
+
 
         <!-- Botón hamburguesa -->
         <button class="gp-header-burger" id="gpMenuToggle" aria-label="Abrir menú" aria-expanded="false">
@@ -63,7 +65,7 @@
       <div class="gp-nav-mobile-divider"></div>
 
       <a href="canchas-ligas.html" class="gp-nav-mobile-switch">
-        <i class="fa-solid fa-right-from-bracket"></i>
+        <i class="fa-solid fa-right-left"></i>
         Canchas o Ligas
       </a>
     </nav>
