--- a/pages/score-type.html
+++ b/pages/score-type.html
@@ -38,9 +38,11 @@
       </nav>
       <div class="gp-header-actions">
         <a href="canchas-ligas.html" class="gp-header-cta">Canchas o Ligas</a>
-        <a href="login.html" class="gp-header-icon" aria-label="Iniciar sesión">
-          <i class="fa-regular fa-user"></i>
-        </a>
+<a href="login.html" class="gp-header-icon gp-header-icon--login" aria-label="Ingresar">
+  <span class="sign"><i class="fa-solid fa-right-to-bracket"></i></span>
+  <span class="text">Ingresar</span>
+</a>
+
 
         <!-- Botón hamburguesa (solo se ve en mobile utilicé un JavaScript base ya que desconozco armarlo) -->
         <button class="gp-header-burger"
@@ -66,10 +68,12 @@
           <div class="gp-nav-mobile-divider"></div>
 
           <!-- Cambio de rol / contexto -->
-          <a href="canchas-ligas.html" class="gp-nav-mobile-switch">
-            <i class="fa-solid fa-right-from-bracket"></i>
-            Canchas o Ligas
-          </a>
+<div class="gp-nav-mobile-divider"></div>
+
+<a href="canchas-ligas.html" class="gp-nav-mobile-switch">
+  <i class="fa-solid fa-right-left"></i>
+  Canchas o Ligas
+</a>
 
         </nav>
   </header>
